nav fix for board page + overflow-y for board

--- a/css/board.css
+++ b/css/board.css
@@ -1,15 +1,48 @@
-.content {
-    margin-left: 300px;
+html, body {
+    height: 100%;
+    margin: 0;
     display: flex;
-    margin-right: 70px;
     flex-direction: column;
-    
 }
 
-.headerClass{
+body {
+    font-family: 'Inter', sans-serif;
+}
+
+header, aside {
+    flex-shrink: 0;
+}
+
+aside {
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 232px;
+    background-color: rgba(42, 54, 71, 1);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.main-content-wrapper {
+    display: flex;
+    flex-direction: column;
+    margin-left: 232px;
+    width: calc(100% - 232px);
+    height: 100%;
+}
+
+main {
+    flex-grow: 1;
+    overflow-y: auto;
+    padding: 20px;
+}
+
+.headerClass {
     display: flex;
     width: 100%;
-    margin-top: 96px;
+    margin-top: 20px;
     justify-content: space-between;
     align-items: center;
 }
